--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </thead>
             <tbody id="items"></tbody>
             <tfoot>
-              <tr id="footer">
+              <tr id="total">
                 <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
               </tr>
             </tfoot>
@@ -62,7 +62,7 @@
       </tr>
     </template>
 
-    <template id="template-footer">
+    <template id="template-total">
         <th scope="row" colspan="2">Total productos</th>
         <td>10</td>
         <td>
